# j_rust_compiler

./: .dockerignore  .gitignore  CMakeLists.txt  DEPLOYMENT.md  DEPLOY_DROPLET.md  DEPLOY_FLY.md  Dockerfile  ENTREGA_FINAL.md  GUIA_DEPLOY.md  Makefile  README.md  SETUP_COMPLETO.md  a.out  ast.cpp  ast.h  ast_to_dot.cpp  ast_to_dot.h  fly.toml  fly.toml.backup  informe.tex  main.cpp  parser.cpp  parser.h  render.yaml  run_all_inputs.py  rust-compiler.service  scanner.cpp  setup_droplet.sh  start_production.sh  test_debugger.md  test_input.rs  test_local.sh  test_output  token.cpp  token.h  visitor.cpp  visitor.h
backend/: .env.example  .gitignore  README.md  main.py  start.sh
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
informe/: README.md
inputs/: input1.txt  input10.txt  input10_tokens.txt  input11.txt  input11_tokens.txt  input12.txt  input12_tokens.txt  input13.txt  input13_tokens.txt  input14.txt  input14_tokens.txt  input15.txt  input15_tokens.txt  input16.txt  input16_tokens.txt  input17.txt  input17_tokens.txt  input1_tokens.txt  input2.txt  input2_tokens.txt  input3.txt  input3_tokens.txt  input4.txt  input4_tokens.txt  input5.txt  input5_tokens.txt  input6.txt  input6_tokens.txt  input7.txt  input7_tokens.txt  input8.txt  input8_tokens.txt  input9.txt  input9_tokens.txt
outputs/: input_10.s  input_11.s  input_12.s  input_13.s  input_14.s  input_16.s  input_17.s  input_2.s  input_3.s  input_4.s  input_5.s  input_6.s  input_7.s  input_8.s  input_9.s
